--- a/escom-bpm-web/src/main/webapp/view/templ/templ.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/templ/templ.xhtml
@@ -17,8 +17,7 @@
         <meta http-equiv="Pragma" content="no-cache" />
         <meta http-equiv="Content-Style-Type" content="text/css" />               
                 
-        <ui:insert name="initBeans">            
-        </ui:insert>
+        <ui:insert name="initBeans"/>        
             
         <title>
             <ui:insert name="title"/>
