--- a/escom-bpm-web/src/main/webapp/view/users/groupsUsers/usergroup-card.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/users/groupsUsers/usergroup-card.xhtml
@@ -2,14 +2,15 @@
                 xmlns:h="http://xmlns.jcp.org/jsf/html"
                 xmlns:p="http://primefaces.org/ui"
                 xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
-                template="/view/templ/templ-card.xhtml">
+                template="/view/templ/templ-card.xhtml"
+                xmlns:f="http://xmlns.jcp.org/jsf/core">
 
     <ui:param name="_bean" value="#{userGroupsCardBean}"/>
 
     <ui:define name="page_body">
         <p:tab id="cardTab" title="#{bundle.Explorer}">             
             <p:panelGrid columns="1" layout="grid" columnClasses="ui-grid-col-12 col-padding" styleClass="ui-panelgrid-blank ui-grid-col-12" >
-                <p:outputLabel value="#{bundle.Name}:" />                
+                <p:outputLabel value="#{bundle.Name}:"/>
                 <p:inputText id="name" value="#{_bean.editedItem.name}"
                             styleClass="ui-grid-col-12"
                             onkeypress="checkEsc(#{_bean.cancelBtnName});"
@@ -18,10 +19,21 @@
                             disabled="#{_bean.isReadOnly()}"
                             requiredMessage="#{bundle.Field} [#{bundle.Name}] #{bundle.MustBeFilled}">                   
                 </p:inputText>
-                <p:message for="name"/>
+                <p:outputLabel value="#{bundle.TypeFilledGroup}:"/>
+                <p:selectOneRadio value="#{_bean.editedItem.typeActualize}" layout="grid" columns="1" >
+                    <f:selectItem itemLabel="#{bundle.InPropertiesGroup}" itemValue="0" />
+                    <f:selectItem itemLabel="#{bundle.InCardObject}" itemValue="1" />
+                    <p:ajax event="select" update="#{_frm}" />
+                </p:selectOneRadio>
+                <h:panelGroup rendered="#{_bean.editedItem.typeActualize == 1}" styleClass="ui-grid-col-12">
+                    <p:outputLabel value="#{bundle.SystemRoleName}:"/>
+                    <p:inputText value="#{_bean.editedItem.roleFieldName}" 
+                                 disabled="#{_bean.isReadOnly()}"
+                                 styleClass="ui-grid-col-12"/>
+                </h:panelGroup>
             </p:panelGrid>
         </p:tab>
-        <p:tab title="#{bundle.Users}"> 
+        <p:tab title="#{bundle.Users}" rendered="#{_bean.editedItem.typeActualize == 0}"> 
                 <ui:include src="/view/common/dict-item-groups.xhtml" >
                     <ui:param name="_groups" value="#{userGroupsCardBean.editedItem.usersList}" />    
                     <ui:param name="_selectorBean" value="#{userBean}" />
